# codex_cpp_shell_model

./: CMakeLists.txt  README.md
examples/: toy_shell_model.cpp
include/shellmodel/: basis.hpp  diagonalization.hpp  hamiltonian.hpp  linalg.hpp  model_space.hpp  observables.hpp  operators.hpp
src/: basis.cpp  diagonalization.cpp  hamiltonian.cpp  model_space.cpp  observables.cpp  operators.cpp
tests/: test_shellmodel.cpp
